--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-loader-spinner": "^4.0.0",
     "react-placeholder": "^4.1.0",
     "react-redux": "^7.2.4",
+    "react-responsive-carousel": "^3.2.21",
     "react-route": "^1.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
